--- a/src/components/resume/buttons/Buttons.module.scss
+++ b/src/components/resume/buttons/Buttons.module.scss
@@ -12,27 +12,10 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.buttons {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1280) > width) {
-	.buttons {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1080) > width) {
-	.buttons {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(900) > width) {
 	.buttons {
-		;
+		margin-top: rubber-size(900, 50, 768, 35);
+		margin-bottom: rubber-size(900, 55, 768, 45);
 	}
 }
 
