--- a/src/components/ui/text/description/description-resume/DescriptionResume.module.scss
+++ b/src/components/ui/text/description/description-resume/DescriptionResume.module.scss
@@ -20,7 +20,8 @@
 
 @media only screen and (px-to-rem(900) > width) {
 	.description {
-		;
+		margin-top: rubber-size(900, 50, 768, 35);
+		width: rubber-size(900, 660, 768, 575);
 	}
 }
 
