--- a/src/components/resume/Resume.module.scss
+++ b/src/components/resume/Resume.module.scss
@@ -89,27 +89,30 @@ $height-resume: px-to-rem(500);
 	.wrap {
 		margin-top: rubber-size(900, 60, 768, 50);
 	}
-
-	.image {
-		;
-	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
+	$height-rubber: rubber-size(768, 400, 576, 310);
+	$mask:	linear-gradient(to bottom, rgba($color-light-gray, 1) 0, 
+			rgba($color-light-gray, 0) $height-rubber);
+	
 	.title {
-		;
+		margin-top: rubber-size(768, 50, 576, 40);
 	}
 
 	.separator {
-		;
+		margin-top: rubber-size(768, 25, 576, 20);
 	}
 
 	.wrap {
-		;
+		width: rubber-size(768, 475, 576, 375);
+		height: $height-rubber;
+		margin-top: rubber-size(768, 50, 576, 40);
 	}
 
 	.image {
-		;
+		-webkit-mask: $mask;
+		mask: $mask;
 	}
 }
 
