The 'Resume' component adapted from 576px to 480px

--- a/src/assets/sass/_classes.scss
+++ b/src/assets/sass/_classes.scss
@@ -82,20 +82,12 @@
 }
 
 @media only screen and (px-to-rem(576) > width) {
-	%btn-small {
-		;
-	}
-
 	%btn-big {
-		;
+		font-size: rubber-size(576, 11, 480, 10);
 	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
-	%btn-small {
-		;
-	}
-
 	%btn-big {
 		;
 	}
