--- a/src/components/resume/buttons/Buttons.module.scss
+++ b/src/components/resume/buttons/Buttons.module.scss
@@ -26,14 +26,10 @@
 	}
 }
 
-@media only screen and (px-to-rem(576) > width) {
-	.buttons {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(480) > width) {
 	.buttons {
-		;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 }
