--- a/src/components/ui/button/button-resume/ButtonResume.module.scss
+++ b/src/components/ui/button/button-resume/ButtonResume.module.scss
@@ -9,3 +9,14 @@
 		margin-left: 0;
 	}
 }
+
+@media only screen and (px-to-rem(480) > width) {
+	.button {
+		margin-left: 0;
+		margin-top: px-to-rem(20);
+
+		&:first-child {
+			margin-top: 0;
+		}
+	}
+}
