--- a/src/components/ui/button/button-footer-social/ButtonFooterSocial.module.scss
+++ b/src/components/ui/button/button-footer-social/ButtonFooterSocial.module.scss
@@ -1,61 +1,61 @@
 @use '@sass/main' as *;
 
-.buttons {
-	margin-top: px-to-rem(50);
-	display: flex;
-}
+.button {
+	@extend %button;
 
-.image-wrap {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	place-content: center;
+	margin-right: px-to-rem(30);
+	width: px-to-rem(30);
+	aspect-ratio: 1 / 1;
+
+	&:last-child {
+		margin-right: 0;
+	}
 }
 
 @media only screen and (px-to-rem(1600) > width) {
-	.buttons {
-		margin-top: rubber-size(1600, 50, 1366, 40);
+	.button {
+		margin-right: rubber-size(1600, 30, 1366, 27);
 	}
 }
 
 @media only screen and (px-to-rem(1366) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(1280) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(1080) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(900) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(576) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
-	.buttons {
+	.button {
 		;
 	}
 }
