--- a/src/components/ui/text/label/label-copyright/LabelCopyright.module.scss
+++ b/src/components/ui/text/label/label-copyright/LabelCopyright.module.scss
@@ -1,61 +1,63 @@
 @use '@sass/main' as *;
 
-.buttons {
-	margin-top: px-to-rem(50);
-	display: flex;
+.label {
+	font-family: $font-montserrat;
+	font-weight: 400;
+	margin-top: px-to-rem(45);
+	font-size: px-to-rem(18);
+	letter-spacing: normal;
+	color: $color-full-white;
 }
 
-.image-wrap {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	place-content: center;
+.copyright {
+	font-family: $font-nunito;
+	font-weight: 700;
 }
 
 @media only screen and (px-to-rem(1600) > width) {
-	.buttons {
-		margin-top: rubber-size(1600, 50, 1366, 40);
+	.label {
+		margin-top: rubber-size(1600, 45, 1366, 40);
 	}
 }
 
 @media only screen and (px-to-rem(1366) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(1280) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(1080) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(900) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(576) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
-	.buttons {
+	.label {
 		;
 	}
 }
