The 'Footer' component adapted from 1280px to 1080px

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -11,55 +11,20 @@
 	justify-content: center;
 }
 
-.copyright {
-	margin-top: px-to-rem(45);
-	font-size: px-to-rem(18) !important;
-	letter-spacing: normal !important;
-	color: $color-full-white !important;
-
-	&-bold {
-		font-family: $font-nunito;
-		font-weight: 700;
-	}
-
-	&-normal {
-		font-family: $font-roboto;
-		font-weight: 400;
-	}
-}
-
 @media only screen and (px-to-rem(1600) > width) {
 	.footer { 
 		height: rubber-size(1600, 325, 1366, 275);
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.footer {
-		;
-	}
-	
-	.copyright {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.footer {
-		;
-	}
-	
-	.copyright {
-		;
+		height: rubber-size(1280, 275, 1080, 250);
 	}
 }
 
 @media only screen and (px-to-rem(1080) > width) {
 	.footer {
-		;
-	}
-	
-	.copyright {
 		;
 	}
 }
@@ -68,18 +33,10 @@
 	.footer {
 		;
 	}
-	
-	.copyright {
-		;
-	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
 	.footer {
-		;
-	}
-	
-	.copyright {
 		;
 	}
 }
@@ -88,18 +45,10 @@
 	.footer {
 		;
 	}
-	
-	.copyright {
-		;
-	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
 	.footer {
-		;
-	}
-	
-	.copyright {
 		;
 	}
 }
