--- a/src/components/footer/buttons/Buttons.module.scss
+++ b/src/components/footer/buttons/Buttons.module.scss
@@ -18,15 +18,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.buttons {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.buttons {
-		;
+		margin-top: rubber-size(1280, 40, 1080, 35);
 	}
 }
 
