--- a/src/components/ui/button/button-footer/ButtonFooter.module.scss
+++ b/src/components/ui/button/button-footer/ButtonFooter.module.scss
@@ -20,3 +20,59 @@
 .label {
 	font-family: $font-montserrat;
 }
+
+@media only screen and (px-to-rem(1280) > width) {
+	.button {
+		font-size: rubber-size(1280, 15, 1080, 14);
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.button {
+		;
+	}
+
+	.wrap {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.button {
+		;
+	}
+
+	.wrap {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.button {
+		;
+	}
+
+	.wrap {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.button {
+		;
+	}
+
+	.wrap {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.button {
+		;
+	}
+
+	.wrap {
+		;
+	}
+}
