--- a/src/components/ui/button/button-footer-social/ButtonFooterSocial.module.scss
+++ b/src/components/ui/button/button-footer-social/ButtonFooterSocial.module.scss
@@ -26,7 +26,8 @@
 
 @media only screen and (px-to-rem(1080) > width) {
 	.button {
-		;
+		width: rubber-size(1080, 25, 900, 30);
+		margin-right: rubber-size(1080, 25, 900, 20);
 	}
 }
 
