--- a/src/components/ui/button/button-footer/ButtonFooter.module.scss
+++ b/src/components/ui/button/button-footer/ButtonFooter.module.scss
@@ -29,11 +29,11 @@
 
 @media only screen and (px-to-rem(1080) > width) {
 	.button {
-		;
+		font-size: rubber-size(1080, 14, 900, 12);
 	}
 
 	.wrap {
-		;
+		margin-bottom: rubber-size(1080, 10, 900, 7);
 	}
 }
 
