The 'Footer' component adapted from 768px and less

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -29,15 +29,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width) {
-	.footer {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(768) > width) {
 	.footer {
-		;
+		height: rubber-size(768, 225, 576, 200);
 	}
 }
 
