--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -13,3 +13,21 @@
 		margin-top: 0;
 	}
 }
+
+@media only screen and (px-to-rem(1366) > width) {
+	.main {
+		margin-top: rubber-size(1366, 65, 1280, 60);
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.main {
+		margin-top: rubber-size(1280, 60, 1080, 55);
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.main {
+		margin-top: rubber-size(900, 55, 768, 50);
+	}
+}
