--- a/src/routes/projects/Projects.module.scss
+++ b/src/routes/projects/Projects.module.scss
@@ -9,15 +9,15 @@
 }
 
 .projects {
-	width: 1000px;
-	margin-block: 50px;
+	width: px-to-rem(1000);
+	margin-block: px-to-rem(50);
 	background-color: $color-light-black;
 	color: $color-full-white;
 }
 
 .project {
 	width: 100%;
-	height: 200px;
+	height: px-to-rem(200);
 	display: flex;
 
 	&-img {
@@ -25,21 +25,20 @@
 		object-fit: cover !important;
 
 		&-wrap {
-			width: 350px;
-			height: 200px;
+			height: 100%;
+			aspect-ratio: 7 / 4;
 		}
 	}
 }
 
 .info {
-	width: calc(100% - 350px);
-	padding-inline: 25px;
+	margin-inline: px-to-rem(25);
 	display: flex;
 	justify-content: space-between;
 }
 
 .details {
-	padding-block: 20px;
+	margin-block: px-to-rem(20);
 	display: flex;
 	flex-direction: column;
 }
@@ -53,11 +52,10 @@
 .button {
 	@extend %btn-small;
 
-	width: 150px;
-	height: 40px;
-	margin-top: 25px;
-	border-block: 2px solid $color-full-white;
-	font-size: 14px;
+	height: px-to-rem(40);
+	margin-top: px-to-rem(25);
+	border-block: px-to-rem(2) solid $color-full-white;
+	font-size: px-to-rem(14);
 
 	&:first-child {
 		margin-top: 0;
@@ -68,7 +66,7 @@
 	width: unset !important;
 	height: unset !important;
 	border: none !important;
-	font-size: 15px !important;
+	font-size: px-to-rem(15) !important;
 	text-align: unset !important;
 	color: $color-full-white !important;
 	display: inline-block !important;
@@ -79,8 +77,8 @@
 }
 
 .description {
-	padding-right: 25px;
-	margin-top: 15px;
+	margin-right: px-to-rem(25);
+	margin-top: px-to-rem(15);
 	overflow: hidden;
 	text-overflow: ellipsis;
 	color: $color-full-white !important;
@@ -91,7 +89,7 @@
 
 .no-projects {
 	width: 100%;
-	height: 200px;
+	height: px-to-rem(200);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -100,6 +98,221 @@
 	&.title {
 		@extend %title;
 
-		font-size: 20px !important;
+		font-size: px-to-rem(20) !important;
+	}
+}
+
+/* // TODO Не забыть адаптировать для класса .no-projects */
+
+@media only screen and (px-to-rem(1280) > width) {
+	.projects {
+		width: rubber-size(1280, 1000, 1080, 900);
+	}
+
+	.project {
+		height: rubber-size(1280, 200, 1080, 175);
+	}
+
+	.info {
+		margin-inline: rubber-size(1280, 25, 1080, 20);
+	}
+
+	.details {
+		margin-block: rubber-size(1280, 20, 1080, 16);
+	}
+
+	.button {
+		font-size: rubber-size(1280, 14, 1080, 13);
+	}
+
+	.description {
+		margin-top: rubber-size(1280, 15, 1080, 10);
+		margin-right: rubber-size(1280, 25, 1080, 20);
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.projects {
+		;
+	}
+
+	.project {
+		;
+	}
+
+	.info {
+		;
+	}
+
+	.details {
+		;
+	}
+
+	.button {
+		;
+	}
+
+	%title {
+		;
+	}
+
+	.description {
+		;
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.projects {
+		;
+	}
+
+	.project {
+		;
+	}
+
+	.info {
+		;
+	}
+
+	.details {
+		;
+	}
+
+	.button {
+		;
+	}
+
+	%title {
+		;
+	}
+
+	.description {
+		;
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.projects {
+		;
+	}
+
+	.project {
+		;
+	}
+
+	.info {
+		;
+	}
+
+	.details {
+		;
+	}
+
+	.button {
+		;
+	}
+
+	%title {
+		;
+	}
+
+	.description {
+		;
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.projects {
+		;
+	}
+
+	.project {
+		;
+	}
+
+	.info {
+		;
+	}
+
+	.details {
+		;
+	}
+
+	.button {
+		;
+	}
+
+	%title {
+		;
+	}
+
+	.description {
+		;
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.projects {
+		;
+	}
+
+	.project {
+		;
+	}
+
+	.info {
+		;
+	}
+
+	.details {
+		;
+	}
+
+	.button {
+		;
+	}
+
+	%title {
+		;
+	}
+
+	.description {
+		;
+	}
+
+	.no-projects {
+		&.title {
+			;
+		}
 	}
 }
