--- a/src/components/ui/text/heading/Heading.module.scss
+++ b/src/components/ui/text/heading/Heading.module.scss
@@ -1,9 +1,9 @@
 @use '@sass/main' as *;
 
 .heading {
-	$ratio: px-to-rem(30);
+	$ratio: 1em;
 
-	padding: $ratio ($ratio * 2);
+	padding: $ratio ($ratio * 3);
 	border: px-to-rem(8) solid $color-full-black;
 	font-family: $font-montserrat;
 	font-weight: 700;
@@ -19,53 +19,52 @@
 
 @media only screen and (px-to-rem(1600) > width) {
 	.heading {
-		$ratio: rubber-size(1600, 30, 1366, 25);
 		$border-size: rubber-size(1600, 8, 1366, 6);
 
-		padding: $ratio calc($ratio * 2);
 		border: $border-size solid $color-full-black;
-		font-size: $ratio;
+		font-size: rubber-size(1600, 30, 1366, 25);
 	}
 }
 
 @media only screen and (px-to-rem(1080) > width) {
 	.heading {
-		$ratio: rubber-size(1080, 25, 900, 23);
 		$border-size: rubber-size(1080, 6, 900, 5);
 
-		padding: $ratio calc($ratio * 2);
 		border: $border-size solid $color-full-black;
-		font-size: $ratio;
+		font-size: rubber-size(1080, 25, 900, 23);
 	}
 }
 
 @media only screen and (px-to-rem(900) > width) {
 	.heading {
-		$ratio: rubber-size(900, 23, 768, 20);
 		$border-size: rubber-size(900, 5, 768, 4);
 
-		padding: $ratio calc($ratio * 2);
 		border: $border-size solid $color-full-black;
-		font-size: $ratio;
+		font-size: rubber-size(900, 23, 768, 20);
 	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
 	.heading {
-		$ratio: rubber-size(768, 20, 576, 17);
+		font-size: rubber-size(768, 20, 576, 16);
+	}
+}
 
-		padding: $ratio calc($ratio * 2);
-		font-size: $ratio;
+@media only screen and (px-to-rem(576) > width) {
+	.heading {
+		$ratio: rubber-size(576, 1, 480, 0.75, "em", 16);
+
+		padding: $ratio calc($ratio * 3);
 	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
 	.heading {
-		$ratio: rubber-size(480, 17, 320, 14);
+		$ratio: rubber-size(480, 0.75, 320, 0.5, "em", 12);
 		$border-size: rubber-size(480, 4, 320, 3);
 
-		padding: $ratio calc($ratio * 2);
+		padding: $ratio calc($ratio * 3);
 		border: $border-size solid $color-full-black;
-		font-size: $ratio;
+		font-size: rubber-size(480, 16, 320, 12);
 	}
 }
