The 2nd part of the 'routes/Project' component was adapted from 576px to 480px

--- a/src/components/gallery/Gallery.module.scss
+++ b/src/components/gallery/Gallery.module.scss
@@ -116,7 +116,12 @@
 
 @media only screen and (px-to-rem(576) > width) {
 	.gallery {
-		;
+		padding-inline: rubber-size(576, 20, 480, 15);
+	}
+
+	.name {
+		margin-bottom: rubber-size(576, 12, 480, 10);
+		font-size: rubber-size(576, 14, 480, 12);
 	}
 }
 
