The 2nd part of the 'routes/Project' component was adapted from 480px and less

--- a/src/components/gallery/Gallery.module.scss
+++ b/src/components/gallery/Gallery.module.scss
@@ -127,6 +127,11 @@
 
 @media only screen and (px-to-rem(480) > width) {
 	.gallery {
-		;
+		padding-inline: rubber-size(480, 25, 320, 17);
+	}
+
+	.name {
+		margin-bottom: rubber-size(480, 15, 320, 10);
+		font-size: rubber-size(480, 14, 320, 12);
 	}
 }
